# nnfc

./: .gitignore  .gitmodules  .travis-check.sh  .travis.Dockerfile  .travis.yml  Makefile.am  README.md  autogen.sh  build.sh  configure.ac  requirements.txt
codecs/: .gitignore  README  sourceme.sh
experiments/cifar10/scripts/: train_cifar10
m4/: hdf5.m4  python.m4
notebook/: cifar10_compression_experiments.ipynb  mfc_cifar10_experiments.ipynb
python/: Makefile.am  build.py  build.sh  install.sh  setup.py  setup.py.new  test.py
python/mfc/: .gitignore
python/mfc/_ext/mfc_wrapper/: __init__.py
python/mfc/functions/: add.py  multiply_constant.py  noop.py
python/mfc/modules/: noop.py
python/mfc/src/: blobs.hh  common.hh  cuda_functions.cc  cuda_functions.hh  mfc_wrapper.c  mfc_wrapper.cc  mfc_wrapper.hh  mfc_wrapper_cuda.cc  mfc_wrapper_cuda.hh  noop_wrapper.cc
python/nnfc/: __init__.py
python/nnfc/functions/: noop.py
python/nnfc/modules/: nnfc.py  noop.py
python/nnfc/src/: blobs.hh  common.hh  cuda_functions.cc  nnfc_codec.cc  nnfc_cuda.cc  nnfc_cuda.hh  nnfc_decoder.cc  nnfc_decoder.hh  nnfc_encoder.cc  nnfc_encoder.hh  nnfc_wrapper.cc  noop_wrapper.cc  noop_wrapper.hh
python/nnfc/src/old/: cuda_functions.cc  nnfc_wrapper.hh
python/test/: test.py
scratch/: .gitignore
scratch/cifar10/: benchmark.py  cifar10_networks.py  cifar10_utils.py  main.py  requirements.txt  resnet.py  resnet_models.py  resnet_with_compression.py  simplenet.py  speedtest.py  train.py
scratch/cifar10/data/: .gitignore  add_compression_artifacts.py  compress_data_summary.json  download_and_extract  generate_datasets  preprocess.py
scratch/cifar10/models/: simplenet.py  speedtest.py
scratch/cifar10/results/: mobilenetv2.json  resnet18.json  resnet18EH2.json  resnet18EH4.json  resnet18JPEG87.json  resnetEH1.json  resnetEH3.json  resnetEH4.json  simple9.json  simple9_thin.json
scratch/cifar10/speedtest/: main.py  mobilenet.py  resnet.py  simplenet.py  speedtest.py
scratch/cifar10/training_scripts/: main.py  mobilenet.py  resnet18.json  resnet18EH0_trainslowest.json  resnet18EH1_trainslowest.json  resnet18EH2_trainslowest.json  resnet18EH3_trainslowest.json  resnet18EH4_trainslowest.json  resnet18JPEG87_trainslowest.json  resnet18JPEG_trainslowest.json  resnet18_trainslower.json  resnet_with_compression.py  simplenet.py  speedtest.py
scratch/object-dectection/: .gitignore  README.md  fix_yolov3_weights.py  yolov3.py
scratch/object-detection/: .gitignore  README.md  benchmark.py  dataset.py  fetch-data.sh  klt.ipynb  mse.ipynb  test.py  test_compress.py  train.py  utils.py  yolov3.py  yolov3_ae.py  yolov3_benchmark.py  yolov3_compress.py  yolov3_orig.py
scratch/object-detection/train_transform/: utils.py  (+3 more)
scratch/pytorch-mask-rcnn/: demo.py  model.py  utils.py
scratch/pytorch-yolo-v3/: darknet.py  util.py
scratch/pytorch-yolo2/: .gitignore  darknet.py  demo.py  detect.py  region_loss.py  train.py  utils.py  valid.py
scratch/recognition/: .gitignore  README.md  imagenet.py  imagenet2012  model.py  run.py  run_demo.py
scratch/ssds.pytorch/: demo.py
scratch/youtube-bb/: download-scripts.ipynb  download.py  make_voc_dataset.py  utils.py
src/: Makefile.am  run_code_formater
src/codec/: Makefile.am  arithmetic_coder.hh  arithmetic_coder_common.hh  arithmetic_encoder.cc  arithmetic_encoder.hh  arithmetic_probability_models.hh  compressor.cc  fastdct.cc  fastdct.hh  jpeg.cc  jpeg.hh  mpeg.cc  mpeg.hh  swizzle.cc  swizzle.hh  utils.cc  utils.hh
src/codec/fastdct/: jfdctfst-sse2.asm  jfdctint-sse2.asm  jidctfst-sse2.asm  jidctint-sse2.asm  jquanti-sse2.asm  jsimd.hh  jsimdext.inc
src/codec/tjdct/: jfdctfst-sse2.asm  jfdctint-sse2.asm  jidctfst-sse2.asm  jidctint-sse2.asm  jquanti-sse2.asm  jsimd.hh  jsimdext.inc
src/frontend/: Makefile.am  README.md  main.cc  nn.hh  simplenet9.cc
src/frontend/arithcode/: .gitignore  Makefile.am  arith_decode  arith_encode  decode.cc  encode.cc  test.sh
src/frontend/arithcode/example-text/: diff.py  encode_fp.py  generate.py  text.small.txt  text.txt
src/frontend/asmdct/: .gitignore  Makefile.am  do_dct  do_dct.cc  test.py
src/frontend/simplenet9/: Makefile.am  Makefile.in  main.cc  simplenet9.cc
src/modules/: Makefile.am  activation.cc  activation.hh  array3d.hh  blob.hh  blob1d.hh  blob2d.hh  blob3d.hh  blob4d.hh  convolution.cc  convolution.hh  fullyconnected.cc  fullyconnected.hh  nn.cc  nnfc.cc  nnfc.hh  nnfc_API.hh  noop.cc  noop.hh  normalization.cc  normalization.hh  pool.cc  pool.hh  tensor.hh
src/nn/: Makefile.am  activation.cc  activation.hh  convolution.cc  convolution.hh  fullyconnected.cc  fullyconnected.hh  layers.cc  layers.hh  libnnfc.la  net.cc  net.hh  nn.cc  nn.hh  normalization.cc  normalization.hh  pool.cc  pool.hh  tensor.hh
src/nnfc/: Makefile.am  h264_image_codec.cc  h264_image_codec.hh  h265_image_codec.cc  h265_image_codec.hh  jpeg_codec.cc  jpeg_codec.hh  jpeg_image_codec.cc  jpeg_image_codec.hh  mpeg_codec.cc  mpeg_codec.hh  mpeg_image_codec.cc  mpeg_image_codec.hh  nnfc.cc  nnfc.hh  nnfc1_codec.cc  nnfc1_codec.cc.orig  nnfc1_codec.hh  nnfc2_codec.cc  nnfc2_codec.hh  nnfc_API.cc  nnfc_CXXAPI.cc  nnfc_CXXAPI.hh  noop_codec.cc  noop_codec.hh  swizzler.cc  swizzler.hh
tests/: Makefile.am  avgpool_cpp.test  avgpool_test.cc  batchnorm_cpp.test  batchnorm_hl_cpp.test  batchnorm_hl_test.cc  batchnorm_test.cc  composed_hl_cpp.test  composed_hl_test.cc  conv2d_hl_test.cc  conv2d_test.cc  convolution_cpp.test  convolution_hl_cpp.test  convolution_hl_nn_cpp.test  cxxapi_simple.cc  fc_cpp.test  fc_test.cc  gpu2cpu_python.test  import_python.test  jpeg_python.test  nnfc.python.test  nnfc1_python.test  nnfc_codecs_python.test  nnfc_python.test  noop_python.test  pythonpath.txt  pythonpath_python.test  relu_cpp.test  relu_hl_cpp.test  relu_hl_test.cc  relu_test.cc  resnet18_test.cc  simplecnn_cpp.test  simplecnn_hl_cpp.test  simplecnn_hl_test.cc  simplecnn_test.cc  test-environment.sh  test.py
tests/arithcode/: .gitignore  Makefile.am  decode.cc  encode.cc  generate.py  test_arithmetic_coder.test
(+36 files in other folders)
