all-local:
	CFLAGS+="$(PYWRAPPER_EXTRA_CFLAGS) $(PYOPTIMIZATION_FLAGS) $(EIGEN3_CFLAGS) $(EIGEN3_UNSUPPORTED_CFLAGS)" \
	LDFLAGS+="$(PYWRAPPER_EXTRA_LDFLAGS) $(JPEG_LDFLAGS) $(AVFORMAT_LDFLAGS) $(AVCODEC_LDFLAGS) $(AVUTIL_LDFLAGS) $(SWSCALE_LDFLAGS) $(FFTW3F_LDFLAGS)" \
	CC="$(CXX)" \
	python3 setup.py build

check-local:

clean-local:
	CC="$(CXX)" \
	python3 setup.py clean --all
	rm -rf ./nnfc/_ext

install-data-local:

install-exec-local:
	CFLAGS+="$(PYWRAPPER_EXTRA_CFLAGS) $(PYOPTIMIZATION_FLAGS) $(EIGEN3_CFLAGS) $(EIGEN3_UNSUPPORTED_CFLAGS)" \
	LDFLAGS+="$(PYWRAPPER_EXTRA_LDFLAGS) $(JPEG_LDFLAGS) $(AVFORMAT_LDFLAGS) $(AVCODEC_LDFLAGS) $(AVUTIL_LDFLAGS) $(SWSCALE_LDFLAGS) $(FFTW3F_LDFLAGS)" \
	CC="$(CXX)" \
	python3 setup.py install

uninstall-local:

